# tapt

./: Cargo.toml  README.md
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/compiler/src/statement/: func.rs  mod.rs  record.rs  structure.rs  variable.rs
crates/compiler/src/statement/expression/: binary.rs  block.rs  call.rs  ident.rs  if_else.rs  index.rs  literal.rs  matching.rs  mod.rs  new.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/src/statement/: for_loop.rs  func.rs  mod.rs  record.rs  structure.rs  variable.rs  while_loop.rs
crates/parser/src/statement/expression/: array.rs  binary.rs  block.rs  call.rs  if_else.rs  index.rs  literal.rs  matching.rs  mod.rs  new.rs  object.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/typing/: Cargo.toml
crates/typing/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: chunk.rs  lib.rs  op.rs  value.rs
