[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
pedantic = "warn"

[workspace.dependencies]
peekmore = "1.3.0"
thiserror = "2.0.11"
derive_more = { version = "1.0.0", features = [
    "display",
    "unwrap",
    "try_unwrap",
    "is_variant",
    "debug",
    "from",
    "into",
] }

# [package]
# name = "tapt"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# ariadne = "0.5.0"
# parking_lot = "0.12.3"
